--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="hint_text">#999999</color>
     
     <!-- Button Colors -->
-    <color name="record_button">#F44336</color>
-    <color name="stop_button">#757575</color>
+    <color name="record_button">#4CAF50</color>
+    <color name="stop_button">#FF5722</color>
     <color name="button_disabled">#E0E0E0</color>
 </resources>
